syntax = "proto3";

option go_package = "../utils/proto/message";


import "google/api/annotations.proto";


//推送邀请消息
message PushInvitedMessageRequest{

  string  token = 1;

  repeated int32 uids = 2;

  string inviter = 3;

  int32 roomid = 4;

  string key = 5 ;


}


message PushInvitedMessageResponse{

  int32 code = 1;

  string message = 2;

}

////////////////////////////////////////////////////////////////////////////// 飞书 //////////////////////////////////////////////////////////////////////////////////////////
//消息推送
message FsAlarmPushRequest{

  string msg_type = 1;

  FsAlarmInfo content = 2;

}
message FsAlarmInfo{
  string text = 1;
}
message FsAlarmPushResponse{

  int32 code = 1;

  string message = 2;

}
//-web
message   WebFsAlarmRobotSetRequest{
  int32 type = 1;//1-server 2-ue 3-web 4-mobile
  string hookAddr = 2;//讨论组机器人ID
  string remark = 3;//备注别名
  string signSecret = 4; //签名秘钥
}
message   WebFsAlarmRobotSetResponse{
  int32 code = 1;

  string message = 2;
}

message   WebFsAlarmRobotListGetRequest{
  int32 type = 1;//1-server 2-ue 3-web 4-mobile
}
message   WebFsAlarmRobotListGetResponse{
  int32 code = 1;

  string message = 2;

  repeated FeiShuAlarmInfo list = 3;
}

message   WebFsAlarmRobotDeleteRequest{
  repeated int32 list = 1;
}
message   WebFsAlarmRobotDeleteResponse{
  int32 code = 1;

  string message = 2;
}


////////////////////////////////////////////////////////////////////////////// 飞书告警DB //////////////////////////////////////////////////////////////////////////////////////////
message   AddFeiShuAlarmInfoDBRequest{
  int32 type = 1;//1-server 2-ue 3-web 4-mobile
  string hookAddr = 2;//讨论组机器人ID
  string remark = 3;//备注别名
  string signSecret = 4; //签名秘钥
}
message   AddFeiShuAlarmInfoDBResponse{
  int32 code = 1;

  string message = 2;
}

message   GetFeiShuAlarmListDBRequest{
  int32 type = 1;//1-server 2-ue 3-web 4-mobile
}
message   GetFeiShuAlarmListDBResponse{
  int32 code = 1;

  string message = 2;

  repeated FeiShuAlarmInfo list = 3;
}

message FeiShuAlarmInfo{
  int32 id = 1;
  string hookAddr = 2;//讨论组机器人ID
  string remark = 3;//备注别名
  string signSecret = 4;//签名
}

message   DeleteFeiShuAlarmInfoDBRequest{
  repeated int32 list = 1;
}
message   DeleteFeiShuAlarmInfoDBResponse{
  int32 code = 1;

  string message = 2;
}

// service 1
service PushService{
  //查询系统配置信息
  rpc PushInviteMessage(PushInvitedMessageRequest) returns (PushInvitedMessageResponse) {
    option (google.api.http) = {
      post: "/v2/message/invite"
      body: "*"
    };
  }

  // service 2
  //飞书告警消息转发
  rpc WebFsAlarmPush(FsAlarmPushRequest) returns (FsAlarmPushResponse) {
    option (google.api.http) = {
      post: "/v2/web/alarm/push"
      body: "*"
    };
  }
  //飞书告警消息转发
  rpc FsAlarmPush(FsAlarmPushRequest) returns (FsAlarmPushResponse) {
    option (google.api.http) = {
      post: "/v2/alarm/push"
      body: "*"
    };
  }
  //飞书告警机器人信息设置
  rpc WebFsAlarmRobotSet(WebFsAlarmRobotSetRequest) returns (WebFsAlarmRobotSetResponse) {
    option (google.api.http) = {
      post: "/v2/web/alarm/robot/set"
      body: "*"
    };
  }
  //飞书告警机器人信息列表获取
  rpc WebFsAlarmRobotListGet(WebFsAlarmRobotListGetRequest) returns (WebFsAlarmRobotListGetResponse) {
    option (google.api.http) = {
      post: "/v2/web/alarm/robot/get"
      body: "*"
    };
  }
  //飞书告警机器人信息删除
  rpc WebFsAlarmRobotDelete(WebFsAlarmRobotDeleteRequest) returns (WebFsAlarmRobotDeleteResponse) {
    option (google.api.http) = {
      post: "/v2/web/alarm/robot/delete"
      body: "*"
    };
  }

}

// service 2
service FeiShuService{
  

}

service FeiShuAlarmDB {

  //添加告警组机器信息
  rpc AddFeiShuAlarmInfo(AddFeiShuAlarmInfoDBRequest) returns (AddFeiShuAlarmInfoDBResponse){}

  rpc GetFeiShuAlarmInfo(GetFeiShuAlarmListDBRequest) returns (GetFeiShuAlarmListDBResponse) {}

  rpc DeleteAlarmInfo (DeleteFeiShuAlarmInfoDBRequest) returns (DeleteFeiShuAlarmInfoDBResponse) {}

}
